--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -31,9 +31,11 @@
         android:layout_width="0dp"
         android:layout_height="@dimen/list_item_height"
         android:layout_weight="7"
+        android:paddingLeft="20dp"
+        android:paddingTop="20dp"
 
-        android:textAppearance="?android:textAppearanceMedium"
-        android:textColor="@android:color/white"
+        android:textAppearance="?android:textAppearanceLarge"
+
         android:textStyle="bold" />
 
 
