--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -23,12 +23,13 @@
         android:id="@+id/image"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="2" />
+        android:layout_weight="3"
+        android:scaleType="fitXY" />
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="4"
+        android:layout_weight="3"
         android:orientation="vertical">
 
 
@@ -67,7 +68,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_toRightOf="@+id/Total"
-                android:text="50Kg"
                 android:textStyle="bold" />
 
         </RelativeLayout>
@@ -90,7 +90,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_toRightOf="@+id/Price"
-                android:text="15"
                 android:textStyle="bold" />
 
         </RelativeLayout>
@@ -117,7 +116,8 @@
             android:layout_weight="1"
             android:orientation="horizontal">
 
-            <TextView
+            <Button
+                android:id="@+id/increment"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -132,7 +132,8 @@
                 android:text="1"
                 android:textSize="22sp" />
 
-            <TextView
+            <Button
+                android:id="@+id/decrement"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
