--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,32 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:id="@+id/drawer_layout"
-    tools:context="com.example.android.jindalfresh.MainActivity">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
     <include
-        android:layout_height="wrap_content"
+        layout="@layout/toolbar_layout"
         android:layout_width="match_parent"
-        layout="@layout/toolbar_layout"/>
+        android:layout_height="wrap_content" />
         <FrameLayout
+            android:id="@+id/frame_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/frame_layout">
+            android:layout_height="match_parent">
         </FrameLayout>
     </LinearLayout>
     <android.support.design.widget.NavigationView
+        android:id="@+id/naviagation_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/naviagation_view"
         android:layout_gravity="start"
-        app:menu="@menu/drawer_menu"
         app:headerLayout="@layout/navigation_drawer_header"
+        app:menu="@menu/drawer_menu"
         >
 
     </android.support.design.widget.NavigationView>
