--- a/app/src/main/res/layout/product_view.xml
+++ b/app/src/main/res/layout/product_view.xml
@@ -5,6 +5,14 @@
     android:orientation="horizontal"
     android:padding="5dp">
 
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="200dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:orientation="horizontal">
     <ImageView
         android:id="@+id/productImageView"
         android:layout_width="0dp"
@@ -137,6 +145,6 @@
             android:text="Add" />
 
     </LinearLayout>
-
-
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
