--- a/app/src/main/res/layouts/app_layouts/layout/order_view.xml
+++ b/app/src/main/res/layouts/app_layouts/layout/order_view.xml
@@ -4,9 +4,15 @@
     android:layout_height="100dp"
     android:orientation="vertical"
     android:padding="5dp">
-    <!--<android.support.v7.widget.CardView-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="100dp">-->
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="100dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
     <TextView
         android:id="@+id/textView_Order_Date"
         android:layout_width="match_parent"
@@ -34,8 +40,8 @@
         android:textSize="14sp"
         android:textStyle="bold" />
 
-
-    <!--</android.support.v7.widget.CardView>-->
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 
 
 </LinearLayout>
