--- a/app/src/main/res/layouts/app_layouts/layout/order_view.xml
+++ b/app/src/main/res/layouts/app_layouts/layout/order_view.xml
@@ -3,14 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="100dp"
     android:orientation="vertical"
-    android:padding="5dp">
+    android:padding="5dp"
+    android:id="@+id/order_View_LinearLayout"
+    >
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="100dp">
 
         <LinearLayout
-            android:id="@+id/order_View_LinearLayout"
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
