--- a/app/src/main/res/layouts/app_layouts/layout/order_view.xml
+++ b/app/src/main/res/layouts/app_layouts/layout/order_view.xml
@@ -10,6 +10,7 @@
         android:layout_height="100dp">
 
         <LinearLayout
+            android:id="@+id/order_View_LinearLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
