--- a/app/src/main/res/layouts/app_layouts/layout/order_view.xml
+++ b/app/src/main/res/layouts/app_layouts/layout/order_view.xml
@@ -24,11 +24,16 @@
         android:gravity="center"
         android:paddingLeft="20dp"
         android:textSize="20sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
 
     <TextView
         android:id="@+id/textView_Total_Quantity_Order_View"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center"
         android:textSize="14sp"
@@ -36,12 +41,12 @@
 
     <TextView
         android:id="@+id/textView_Total_Price_Order_View"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center"
         android:textSize="14sp"
-        android:textStyle="bold" />
+        android:textStyle="bold" /></LinearLayout>
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
