--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -28,7 +28,7 @@
             android:layout_weight="8" />
 
         <RelativeLayout
-            android:id="@+id/btn_submit"
+            android:id="@+id/cart_checkout"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2">
@@ -55,9 +55,6 @@
                 android:layout_marginRight="8dp"
                 android:background="@drawable/cart_circle"
                 android:gravity="center"
-
-
-                android:text="2"
                 android:textColor="@android:color/white"
 
 
