--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,12 +16,52 @@
 
     </android.support.v7.widget.RecyclerView>
 
-    <Button
-        android:id="@+id/btn_submit"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:padding="5dp"
-        android:text="Submit" />
+        android:orientation="horizontal">
 
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="8" />
+
+        <RelativeLayout
+            android:id="@+id/btn_submit"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2">
+
+            <ImageView
+
+                android:layout_width="wrap_content"
+
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:padding="5dp"
+                android:scaleType="fitXY"
+
+                android:src="@drawable/ic_add_shopping_cart_black_24dp" />
+
+            <TextView
+                android:id="@+id/cart_items_no_display"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_alignParentRight="true"
+
+                android:layout_marginRight="8dp"
+                android:background="@drawable/cart_circle"
+                android:gravity="center"
+
+
+                android:text="2"
+                android:textColor="@android:color/white"
+
+
+                android:textSize="25sp" />
+        </RelativeLayout>
+    </LinearLayout>
 </LinearLayout>
