--- a/app/src/main/res/layout/product_view.xml
+++ b/app/src/main/res/layout/product_view.xml
@@ -98,11 +98,28 @@
         android:layout_weight="3"
         android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+            <!--<TextView-->
+            <!--android:id="@+id/spinnerValue"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="match_parent"-->
+
+            <!--android:layout_weight="85"-->
+            <!--android:gravity="center"-->
+            <!--/>-->
         <Spinner
             android:id="@+id/spinner"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
+            android:layout_height="match_parent"
+
+
+            />
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
