--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
     <item
-        android:id="@+id/action_setting"
-        android:title="Setting"
+        android:id="@+id/action_logout"
+        android:title="Logout"
         android:icon="@drawable/ic_setting"
         app:showAsAction="ifRoom"
         android:orderInCategory="300"
