--- a/app/src/main/res/layout/navigation_drawer_header.xml
+++ b/app/src/main/res/layout/navigation_drawer_header.xml
@@ -6,10 +6,11 @@
     android:padding="20dp">
 
     <TextView
+        android:id="@+id/navigation_header_text_view_emmail_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp"
-        android:text="Hi Jitendra"
+
         android:textColor="@android:color/white"
         android:textSize="20sp" />
 
