--- a/app/src/main/res/layouts/app_layouts/layout/cart_item_adapter_view.xml
+++ b/app/src/main/res/layouts/app_layouts/layout/cart_item_adapter_view.xml
@@ -19,7 +19,7 @@
         android:id="@+id/cartItem_ImageView"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="5"
+        android:layout_weight="4"
         android:scaleType="fitXY" />
 
     <LinearLayout
@@ -93,6 +93,23 @@
 
 
     </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+
+                <ImageView
+                    android:id="@+id/imageView_cartItem_delete"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="2"
+                    android:src="@drawable/ic_delete_black_24dp" />
+            </LinearLayout>
+
+
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
