--- a/app/src/main/res/layouts/app_layouts/layout/activity_delivery.xml
+++ b/app/src/main/res/layouts/app_layouts/layout/activity_delivery.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:gravity="center"
         android:text="Select Delivery Date" />
 
 
@@ -16,10 +17,34 @@
         android:id="@+id/deliveryDate_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="9"
+        android:layout_weight="8"
         android:padding="5dp">
 
     </android.support.v7.widget.RecyclerView>
+
+    <LinearLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_DDate_Total_Price"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center" />
+
+        <TextView
+            android:id="@+id/tv_DDate_next"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="Next"
+            android:textSize="18sp" />
+    </LinearLayout>
 
 
 </LinearLayout>
