--- a/app/src/main/res/layouts/app_layouts/layout/activity_splesh_screen.xml
+++ b/app/src/main/res/layouts/app_layouts/layout/activity_splesh_screen.xml
@@ -1,31 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark">
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/imgLogo"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:orientation="vertical">
 
-        android:src="@drawable/veg"
+
+        <ImageView
+            android:id="@+id/img_jf_logo"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+
+
+            android:src="@drawable/jindal_fresh_logo"
 
         />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-
-        android:gravity="center"
-        android:paddingLeft="12dp"
-        android:text="JF"
-        android:textAllCaps="true"
-        android:textColor="#454545"
-
-        android:textSize="35sp" />
+    </LinearLayout>
 
 </RelativeLayout>
