--- a/app/src/main/res/layout/product_view.xml
+++ b/app/src/main/res/layout/product_view.xml
@@ -50,29 +50,6 @@
 
 
             <TextView
-                android:id="@+id/Total"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Total "
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/TotalQuantity"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_toRightOf="@+id/Total"
-
-                android:textStyle="bold" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
-
-
-            <TextView
                 android:id="@+id/Price"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -103,21 +80,11 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="horizontal">
-            <!--<TextView-->
-            <!--android:id="@+id/spinnerValue"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent"-->
 
-            <!--android:layout_weight="85"-->
-            <!--android:gravity="center"-->
-            <!--/>-->
         <Spinner
             android:id="@+id/spinner"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-
-
-            />
+            android:layout_height="match_parent" />
 
         </LinearLayout>
 
@@ -153,13 +120,6 @@
                 android:text="-"
                 android:textSize="22sp" />
         </LinearLayout>
-
-        <Button
-            android:id="@+id/btn_AddToCart"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:text="Add" />
 
     </LinearLayout>
         </LinearLayout>
