--- a/app/src/main/res/layouts/app_layouts/layout/activity_address.xml
+++ b/app/src/main/res/layouts/app_layouts/layout/activity_address.xml
@@ -5,81 +5,70 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="10dp"
-    tools:context="com.example.android.jindalfresh.app_activities.auth.RegistrationActivity">
+    tools:context="com.example.android.jindalfresh.app_activities.auth.AddressActivity">
 
     <EditText
-        android:id="@+id/editText_signup_first_name"
+        android:id="@+id/address_EditText_addresss_1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:hint="First Name" />
+        android:hint="Address 1" />
 
     <EditText
-        android:id="@+id/editText_signup_last_name"
+        android:id="@+id/address_EditText_addresss_2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:hint="Last Name" />
+        android:hint="Address 2" />
 
     <EditText
-        android:id="@+id/editText_signup_phonenumber"
+        android:id="@+id/address_EditText_street"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:hint="Mobile Number" />
+        android:hint="Street" />
 
     <EditText
-        android:id="@+id/editText_signup_phonenumber_2"
+        android:id="@+id/address_EditText_landmark"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:hint="Alternate Mobile Number" />
+        android:hint="Landmark" />
 
     <EditText
-        android:id="@+id/editText_signup_email"
+        android:id="@+id/address_EditText_district"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:hint="Email" />
+        android:hint="District" />
 
     <EditText
-        android:id="@+id/editText_signup_password"
+        android:id="@+id/address_EditText_city"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:hint="Password" />
+        android:hint="City" />
 
-    <TextView
-        android:id="@+id/editText_signup_address"
+    <EditText
+        android:id="@+id/address_EditText_state"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:text="Edit Address" />
+        android:hint="State" />
 
-    <!--<EditText-->
-    <!--android:id="@+id/editText_signup_confirm_password"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="0dp"-->
-    <!--android:layout_weight="1"-->
-    <!--android:hint="Confirm Password"/>-->
+    <EditText
+        android:id="@+id/address_EditText_pincode"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:hint="Pincode" />
 
     <Button
-        android:id="@+id/button_signup_signup"
+        android:id="@+id/address_button_continue"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:text="SignUp" />
-
-    <Button
-        android:id="@+id/button_signup_login"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:text="Login" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4"
-        android:orientation="horizontal"></LinearLayout>
+        android:text="Continue" />
 </LinearLayout>
+
+
